--- a/src/components/sections/Now.astro
+++ b/src/components/sections/Now.astro
@@ -7,11 +7,11 @@ import Pulse from '../Pulse.astro'
   <div class="mb-2 flex w-full items-start justify-between">
     <div class="flex flex-col">
       <h2>Now</h2>
-      <a href="https://sive.rs/nowff" target="_blank">
+      <a href="https://github.com/SirTamago/sleepy" target="_blank">
         <span class="cursor-pointer text-xs text-gray-500">what's that ?</span>
       </a>
     </div>
     <Pulse />
   </div>
-  <p class="text-xs">Currently working as freelancer</p>
+  <a href="https://peek.rimrose.top" target="_blank" class="text-xs">点击查看我在干什么</a>
 </Card>
