--- a/src/components/sections/TattooCard.astro
+++ b/src/components/sections/TattooCard.astro
@@ -14,7 +14,7 @@ import { LINKS } from '../../lib/constants'
       <img
         width="50"
         height="50"
-        src="/me_tattoo.png"
+        src="/5ee860e914461ad6fe5bc41f3c899f67.JPG"
         class="pointer-events-none absolute bottom-[-20px] right-[-110px] z-[-1] max-h-[300px] w-auto select-none opacity-50 md:relative md:bottom-auto md:right-auto md:z-auto md:opacity-100"
         alt="memoji of andres with a tattoo on his arm"
       />
