--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,9 +65,9 @@ import { motion, AnimatePresence } from 'framer-motion'
     <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
       <div class="flex h-full flex-col justify-between">
         <blockquote class="mt-6 border-l-2 pl-6 italic">
-          “Anything one man can imagine, other men can make real.”
+          “We are all in the gutter, but some of us are looking at the stars.”
         </blockquote>
-        <p class="mt-2 text-xs">- Jules Verne</p>
+        <p class="mt-2 text-xs">- Oscar Wilde</p>
       </div>
     </Card>
     <TattooCard />
