--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url("https://chinese-fonts-cdn.deno.dev/packages/lxgwwenkaibright/dist/LXGWBright-Medium/result.css");
