--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -19,7 +19,7 @@ const {
     <img
       src={imagePath}
       alt={altText}
-      class="h-48 w-full rounded-2xl rounded-bl-none rounded-br-none object-cover"
+      class="w-full rounded-2xl rounded-bl-none rounded-br-none object-cover aspect-[16/9]"
       loading="eager"
     />
     <div class="flex flex-col gap-y-0.5 px-5 py-4">
