--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -11,7 +11,7 @@ import { Linkedin, Github, Mail } from 'lucide-react'
       <div class="flex h-full flex-col">
         <h6 class="m-0 text-sm font-light text-gray-500">Welcome</h6>
         <p class="m-0 text-xl font-light">
-          嗨！我是 <b class="font-bold">筱荷</b>, 一名学生.很长很长很长很长很长很长很长很长很长很长很长很长的文字
+          嗨！我是 <b class="font-bold">筱荷</b>，一名学生。此页面正在修改中……
         </p>
         <p class="m-0 text-xl font-light">
           Hi, I'm <b class="font-bold">Rimrose</b>, a student.
