--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -24,9 +24,9 @@ const { title, description, ogImage } = Astro.props
 <meta name="generator" content={Astro.generator} />
 <link rel="canonical" href={canonicalURL} />
 <link
-  rel="shortcut icon"
-  type="image/svg+xml"
-  href={`${Astro.site}favicon.svg`}
+  rel="icon"
+  type="image/x-icon"
+  href="/favicon.ico"
 />
 <title>{title}</title>
 <meta name="title" content={title} />
